Fix T77915: Cycles OSL microfacet closure not working in custom shaders

The code to implement the newer closure in terms of the old one got lost in
the removal of our stdosl.h copy. Now implement it as a builtin closure.